--- a/index.html
+++ b/index.html
@@ -414,6 +414,19 @@
                         </li>
                     </ul>
             </div>
+            <div class="container-subscription">
+                <h3 class="form-title">Подпишитесь на рассылку</h3>
+                <form class="footer-form">
+                    <input type="email" name="email" autocomplete="on" placeholder="E-mail"
+                        class="footer-email-input" />
+                    <button type="submit" class="footer-btn-subscrib">
+                        Подписаться
+                        <svg class="icon-subscribe" width="24" height="24">
+                            <use href="./images/symbol-defs.svg#icon-subscribe"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="./js/modal.js"></script>
