правки згідно рекомендацій ментора

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <a href="#" class="link-policy"> Условия договора </a>
                             </label>
 
-                            <button type="submit" class="button btn-modal-form-order">Отправить</button>
+                            <button type="submit" class="btn btn-modal-form-order">Отправить</button>
                         </form>
                     </div>
                 </div>
